b=251506, browser crashes when using 'sort bookmarks' extension with 'add bookmarks here' extension, r+a=ben